<resources>
    <string name="app_name">SpaceX</string>
    <string name="home_title">SpaceX</string>
    <string name="company_title">COMPANY</string>
    <string name="company_desc">Company description</string>
    <string name="launches_title">LAUNCHES</string>
    <string name="mission">Mission :</string>
    <string name="datetime">Date/time :</string>
    <string name="rocket">Rocket :</string>
    <string name="timediff">Days %1s now :</string>
    <string name="placeholder">--</string>
    <string name="smth_wrong">Something Went Wrong .. Try again !</string>
</resources>