<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/launchLayout"
    >

    <ImageView
        android:id="@+id/launche_img"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="7dp"/>
    <TextView
        android:id="@+id/missiontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission"
        app:layout_constraintTop_toTopOf="@id/launche_img"
        app:layout_constraintStart_toEndOf="@id/launche_img"
        android:layout_marginStart="12dp"/>
    <TextView
        android:id="@+id/datetimetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        app:layout_constraintTop_toBottomOf="@id/missiontxt"
        app:layout_constraintStart_toStartOf="@id/missiontxt"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/rockettxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rocket"
        app:layout_constraintTop_toBottomOf="@id/datetimetxt"
        app:layout_constraintStart_toStartOf="@id/datetimetxt"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/timedifftxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timediff"
        app:layout_constraintTop_toBottomOf="@id/rockettxt"
        app:layout_constraintStart_toStartOf="@id/rockettxt"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/missionval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintTop_toTopOf="@id/missiontxt"
        app:layout_constraintStart_toEndOf="@id/missiontxt"
        android:layout_marginStart="56dp"/>
    <TextView
        android:id="@+id/datetimeval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintTop_toBottomOf="@id/missiontxt"
        app:layout_constraintStart_toStartOf="@id/missionval"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/rocketval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintTop_toBottomOf="@id/datetimetxt"
        app:layout_constraintStart_toStartOf="@id/missionval"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/timediffval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintTop_toBottomOf="@id/rockettxt"
        app:layout_constraintStart_toStartOf="@id/missionval"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        />
    <View
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        />
    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"/>
    <ImageView
        android:id="@+id/ytbIcon"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_youtube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="7dp"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>